--- a/index.css
+++ b/index.css
@@ -5,3 +5,13 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Muli', sans-serif;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
